fix spacing under images if it’s the last item

--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -81,6 +81,10 @@
     & + hr {
       display: none;
     }
+
+    &.project__picture-group:last-child {
+      margin-bottom: -6vw;
+    }
   }
 
   &__picture {
